--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -41,9 +41,12 @@
                         </div>
                         <!-- Remove Button Column -->
                         <div class="col-2 col-sm-2 text-center">
-                          <button class="btn btn-sm btn-danger" (click)="removeBookFromCart(item._id)">Remove</button>
+                          @if(disableRemoveButton == true) {
+                            <button class="btn btn-sm btn-danger" (click)="removeBookFromCart(item._id)" disabled>Remove</button>
+                          } @else {
+                            <button class="btn btn-sm btn-danger" (click)="removeBookFromCart(item._id)">Remove</button>
+                          }
                         </div>
-
                       </div>
                     </label>
                   </div>
