--- a/src/app/components/view-book-details/view-book-details.component.html
+++ b/src/app/components/view-book-details/view-book-details.component.html
@@ -8,7 +8,7 @@
           </div>
         </div>
         <div class="card-body">
-          @if(imageLink) {
+          @if(bookImage) {
             <img [src]="imageLink" alt="user-image" class="card-img-top w-15 d-flex justify-content-center align-items-center mx-auto rounded-bottom img-size"/>
           } @else {
             <img src="https://www.shareicon.net/data/128x128/2017/03/02/880210_images_512x512.png" alt="user-image" class="card-img-top w-15 d-flex justify-content-center align-items-center mx-auto rounded-bottom img-size"/>
@@ -26,12 +26,12 @@
           <h5 class="text-center mt-3">Ratings: {{ratings}}</h5>
           <div class="justify-content-center d-flex gap-3">
           @if(viewedBook == null || viewedBook == "" || viewedBook == undefined) {
-            <button class="btn btn-primary w-25 mt-2 d-flex justify-content-center align-items-center" (click)="addToCart(bookName)" disabled>Add to Cart</button>
+            <button class="btn btn-primary w-25 mt-2 d-flex justify-content-center align-items-center" (click)="addToCart()" disabled>Add to Cart</button>
             <button class="btn btn-secondary text-white w-25 mt-2 d-flex justify-content-center align-items-center" (click)="rateBook(bookName)" disabled>Rate Book</button>
             <button class="btn btn-info text-white w-30 mt-2 d-flex justify-content-center align-items-center" (click)="addReview(bookName)" disabled>Add a Review</button>
             <button class="btn btn-danger w-30 mt-2 d-flex justify-content-center align-items-center" (click)="backToHome()" disabled>Back to Home</button>
           } @else {
-            <button class="btn btn-primary w-25 mt-2 d-flex justify-content-center align-items-center" (click)="addToCart(bookName)">Add to Cart</button>
+            <button class="btn btn-primary w-25 mt-2 d-flex justify-content-center align-items-center" (click)="addToCart()">Add to Cart</button>
             <button class="btn btn-secondary text-white w-25 mt-2 d-flex justify-content-center align-items-center" (click)="rateBook(bookName)">Rate Book</button>
             <button class="btn btn-info text-white w-30 mt-2 d-flex justify-content-center align-items-center" (click)="addReview(bookName)">Add a Review</button>
             <button class="btn btn-danger w-30 mt-2 d-flex justify-content-center align-items-center" (click)="backToHome()">Back to Home</button>
