removed some unnecessary css and fized issue of search bar in books component

--- a/src/app/components/aboutus/aboutus.component.html
+++ b/src/app/components/aboutus/aboutus.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-1" id="about-us">
-  <div class="card backgound-img">
+  <div class="card backgound-img border-0">
     <div class="card-body">
       <div class="card-title">
         <h3 class="text-center">About Us</h3>
