--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-1 mb-1" id="feedback">
-  <div class="card backgound-img">
+  <div class="card backgound-img border-0">
     <div class="card-body">
       <div class="card-title">
         <h3 class="text-center">Feedback</h3>
@@ -10,7 +10,7 @@
         </h5>
       </div>
       <form class="p-3 align-items-center justify-content-center w-50 mx-auto" (ngSubmit)="sendFeedback()">
-        <div class="card card-body">
+        <div class="card card-body border-0">
           <h5 class="text-center justify-content-center fw-bold">Feedback</h5>
           <div class="form-group">
             <label for="name" class="mb-1">Name</label>
