--- a/src/app/components/books/books.component.html
+++ b/src/app/components/books/books.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid p-1" id="books">
-  <div class="card backgound-img">
-    <div class="card-body">
+  <div class="card backgound-img border-0">
+    <div class="card-body border-0">
       <div class="card-title">
         <h3 class="text-center">Books</h3>
       </div>
@@ -9,20 +9,20 @@
           <h4>Our Latest Books</h4>
         </div>
         <div class="input-group mb-3 w-25 mt-1 align-items-right">
-          <input type="text" class="form-control" placeholder="Search Books" aria-label="Search Books" aria-describedby="basic-addon2">
-          <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"></i></span>
+          <input type="text" class="form-control" placeholder="Search Books" aria-label="Search Books" aria-describedby="basic-addon2" [(ngModel)]="searchInput1" (input)="ngOnInit()">
+          <span class="input-group-text"><i class="fas fa-search"></i></span>
         </div>
       </div>
       <div class="row">
         @if(latestBooksFound) {
           <div class="col-md-2 mb-2" *ngFor="let book of latestBooks;let i = index; trackBy: trackByFn">
-            <div class="card cursor-pointer">
+            <div class="card cursor-pointer border-0">
               @if(book.image.name == null) {
                 <img src="https://www.shareicon.net/data/128x128/2017/03/02/880210_images_512x512.png" class="card-img-top img-size w-100" alt="book Image">
               } @else {
                 <img [src]="'http://localhost:8000/uploads/' + book.image.name" class="card-img-top img-size w-100" alt="book Image">
               }
-              <div class="card-body">
+              <div class="card-body border-0">
                 <h5 class="card-title text-center m-0">{{book.name}}</h5>
                 <p class="card-text text-center m-0">{{book.auther}}</p>
                 <p class="card-text text-center m-0">{{book.publishers}}</p>
@@ -35,7 +35,7 @@
             </div>
           </div>
         } @else {
-          <span class="text-center">No Latest Books Found</span>
+          <span class="text-center">Oops! No Latest Books Found</span>
         }
       </div>
       <div class="d-flex justify-content-space-between gap-5">
@@ -43,14 +43,14 @@
           <h4>All Books</h4>
         </div>
         <div class="input-group mb-3 w-25 mt-1 align-items-right">
-          <input type="text" class="form-control" placeholder="Search Books" aria-label="Search Books" aria-describedby="basic-addon2">
+          <input type="text" class="form-control" placeholder="Search Books" aria-label="Search Books" aria-describedby="basic-addon2" [(ngModel)]="searchInput2" (input)="ngOnInit()">
           <span class="input-group-text" id="basic-addon2"><i class="fas fa-search"></i></span>
         </div>
       </div>
       <div class="row">
         @if(booksFound) {
           <div class="col-md-2 mb-2" *ngFor="let book of allBooks; let i = index; trackBy: trackByFn">
-            <div class="card cursor-pointer">
+            <div class="card cursor-pointer border-0">
               @if(book.image.name == null) {
                 <img src="https://www.shareicon.net/data/128x128/2017/03/02/880210_images_512x512.png" class="card-img-top img-size w-100" alt="book Image">
               } @else {
@@ -69,7 +69,7 @@
             </div>
           </div>
         } @else {
-          <span class="text-center">No Books Found</span>
+          <span class="text-center">Oops! No Books Found</span>
         }
       </div>
     </div>
