--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid p-1 mt-1" id="home">
-  <div class="card backgound-img">
-    <div class="card-body">
+  <div class="card backgound-img border-0">
+    <div class="card-body border-0">
       <div class="card-text pt-5">
         <h1 class="card-title text-center justify-content-center text-white mt-5 pt-5">Welcome to BookFiezta!</h1>
         <h2 class="card-text text-center text-white mt-4">Enjoy Your Life By Seeking Books, Buting Books, Reading Books and Earn Benefits.</h2>
