fixed some issues in file structure and fixed payment info

--- a/src/app/components/admin/admin-functional-components/admin-view-book/admin-view-book.component.html
+++ b/src/app/components/admin/admin-functional-components/admin-view-book/admin-view-book.component.html
@@ -34,7 +34,7 @@
               </div>
               <div class="form-group">
                 <label for="author" class="mb-1">Book Author:</label>
-                <input type="text" class="form-control mb-1" id="auther" required [(ngModel)]="bookAuthor" name="userEmail">
+                <input type="text" class="form-control mb-1" id="author" required [(ngModel)]="bookAuthor" name="userEmail">
               </div>
               <div class="form-group">
                 <label for="publishers" class="mb-1">Book Publishers:</label>
@@ -54,11 +54,11 @@
               </div>
               <div class="form-group">
                 <label for="genre" class="mb-1">Book Genre</label>
-                <select [(ngModel)]="bookGenre" class="form-select" name="genre" required>
+                <select [(ngModel)]="bookGenre" class="form-select" id="genre" name="genre" required>
                   <option value="" disabled selected>Select a Genre</option>
                   <option value="Novel">Novel</option>
                   <option value="Fiction">Fiction</option>
-                  <option value="Ditective">Ditective</option>
+                  <option value="Ditective">Detective</option>
                   <option value="Fantasy">Fantasy</option>
                   <option value="Science Fiction">Science Fiction</option>
                   <option value="Horror">Horror</option>
