--- a/src/app/components/user/user-functional-components/books/books.component.html
+++ b/src/app/components/user/user-functional-components/books/books.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-1" id="books">
-  <div class="card backgound-img border-0">
+  <div class="card border-0">
     <div class="card-body border-0">
       <div class="card-title">
         <h3 class="text-center">Books</h3>
@@ -20,7 +20,7 @@
               @if(book.image.name == null) {
                 <img src="https://www.shareicon.net/data/128x128/2017/03/02/880210_images_512x512.png" class="card-img-top img-size w-100" alt="book Image">
               } @else {
-                <img [src]="'http://localhost:8000/uploads/' + book.image.name" class="card-img-top img-size w-100" alt="book Image">
+                <img [src]="'http://localhost:8000/uploads/' + book.image.name" class="card-img-top img-size w-100 rounded-bottom-0" alt="book Image">
               }
               <div class="card-body border-0">
                 <h5 class="card-title text-center m-0">{{book.name}}</h5>
@@ -54,7 +54,7 @@
               @if(book.image.name == null) {
                 <img src="https://www.shareicon.net/data/128x128/2017/03/02/880210_images_512x512.png" class="card-img-top img-size w-100" alt="book Image">
               } @else {
-                <img [src]="'http://localhost:8000/uploads/' + book.image.name" class="card-img-top img-size w-100" alt="book Image">
+                <img [src]="'http://localhost:8000/uploads/' + book.image.name" class="card-img-top img-size w-100 rounded-bottom-0" alt="book Image">
               }
               <div class="card-body">
                 <h5 class="card-title text-center m-0">{{book.name}}</h5>
