--- a/src/app/components/user/user-general-components/logged-user-home/logged-user-home.component.css
+++ b/src/app/components/user/user-general-components/logged-user-home/logged-user-home.component.css
@@ -1,4 +1,4 @@
-.backgound-img {
+.background-img {
   background-image: url(https://images.alphacoders.com/886/886682.jpg);
   background-size: cover;
   background-position: center;
