--- a/src/app/components/admin/admin-functional-components/admin-add-book/admin-add-book.component.html
+++ b/src/app/components/admin/admin-functional-components/admin-add-book/admin-add-book.component.html
@@ -32,11 +32,11 @@
         </div>
         <div class="form-group">
           <label for="publishers" class="mb-1">Publishers</label>
-          <input type="text" class="form-control mb-1" id="puplishers" required [(ngModel)]="bookPublishers" name="bookPublishers" required>
+          <input type="text" class="form-control mb-1" id="publishers" required [(ngModel)]="bookPublishers" name="bookPublishers" required>
         </div>
         <div class="form-group">
           <label for="published-year" class="mb-1">Published Year</label>
-          <input type="text" class="form-control mb-1" id="puplished-year" required [(ngModel)]="bookPublishedYear" name="bookPublishedYear" required>
+          <input type="text" class="form-control mb-1" id="published-year" required [(ngModel)]="bookPublishedYear" name="bookPublishedYear" required>
         </div>
         <div class="form-group">
           <label for="description" class="mb-1">Description</label>
@@ -48,11 +48,11 @@
         </div>
         <div class="form-group">
           <label for="genre" class="mb-1">Genre</label>
-          <select [(ngModel)]="selectedGenre" class="form-select" name="genre" required>
+          <select [(ngModel)]="selectedGenre" class="form-select" id="genre" name="genre" required>
             <option value="" disabled selected>Select a Genre</option>
             <option value="Novel">Novel</option>
             <option value="Fiction">Fiction</option>
-            <option value="Ditective">Ditective</option>
+            <option value="Ditective">Detective</option>
             <option value="Fantasy">Fantasy</option>
             <option value="Science Fiction">Science Fiction</option>
             <option value="Horror">Horror</option>
@@ -108,8 +108,9 @@
             <option value="Other">Other</option>
           </select>
         </div>
-        <div class="d-flex align-items-center justify-content-center">
+        <div class="row gap-2 mx-auto align-items-center d-flex justify-content-center">
           <button type="submit" class="btn btn-primary mt-2" (click)="addBook()">Add Book</button>
+          <button type="submit" class="btn btn-danger mt-2" (click)="backToHome()">Cancel and Go Back to Homepage</button>
         </div>
       </form>
     </div>
