--- a/src/app/components/general/contactus/contactus.component.html
+++ b/src/app/components/general/contactus/contactus.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-1 mb-1" id="contact-us">
-  <div class="card backgound-img border-0">
+  <div class="card border-0">
     <div class="card-body">
       <div class="card-title">
         <h3 class="text-center">Contact Us</h3>
