--- a/src/app/components/user/user-general-components/feedback/feedback.component.html
+++ b/src/app/components/user/user-general-components/feedback/feedback.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-1 mb-1" id="feedback">
-  <div class="card backgound-img border-0">
+  <div class="card border-0">
     <div class="card-body">
       <div class="card-title">
         <h3 class="text-center">Feedback</h3>
@@ -27,7 +27,7 @@
             <textarea class="form-control mb-2" id="message" rows="3" placeholder="Your message" required [(ngModel)]="message" name="message"></textarea>
           </div>
           <div class="d-flex align-items-center justify-content-center">
-            <button type="submit" class="btn btn-primary w-30">
+            <button type="submit" class="btn btn-primary w-25">
               <!-- Conditional Spinner or Text -->
               @if(isLoading == true) {
                 <i class="fas fa-spinner fa-spin"></i>
