--- a/src/app/components/user/user-general-components/logged-user-home/logged-user-home.component.html
+++ b/src/app/components/user/user-general-components/logged-user-home/logged-user-home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-1 mt-1" id="loggeduser-home">
-  <div class="card backgound-img border-0">
+  <div class="card background-img border-0">
     <div class="card-body">
       <div class="card-text pt-5">
         <h1 class="card-title text-center justify-content-center text-white mt-5 pt-5">Now You Have Logged Into BookFiezta!</h1>
