--- a/src/app/components/user/user-functional-components/reset-password/reset-password.component.html
+++ b/src/app/components/user/user-functional-components/reset-password/reset-password.component.html
@@ -9,11 +9,17 @@
           <form (ngSubmit)="resetPassword()">
             <div class="form-group">
               <label for="password" class="mb-2">New Password</label>
-              <input type="password" class="form-control mb-2" id="password" placeholder="Enter New Password" required [(ngModel)]="userPassword" name="userPassword">
+              <div class="password-container">
+                <input [type]="passwordFieldType" class="form-control mb-2" id="password" placeholder="Enter New Password" required [(ngModel)]="userPassword" name="userPassword">
+                <i class="fas" [ngClass]="passwordFieldType === 'password' ? 'fa-eye' : 'fa-eye-slash'" (click)="togglePassword()"></i>
+              </div>
             </div>
             <div class="form-group">
               <label for="confirm-password" class="mb-2">Confirm New Password</label>
-              <input type="password" class="form-control mb-3" id="confirm-password" placeholder="Confirm the entered password" required [(ngModel)]="userConfirmPassword" name="userConfirmPassword">
+              <div class="password-container">
+                <input [type]="confirmPasswordFieldType" class="form-control mb-3" id="confirm-password" placeholder="Confirm the entered password" required [(ngModel)]="userConfirmPassword" name="userConfirmPassword">
+                <i class="fas" [ngClass]="confirmPasswordFieldType === 'password' ? 'fa-eye' : 'fa-eye-slash'" (click)="toggleConfirmPassword()"></i>
+              </div>
             </div>
             <div class="d-flex align-items-center justify-content-center mt-2">
               <button type="submit" class="btn btn-primary w-20">
