--- a/src/app/components/user/user-functional-components/register/register.component.css
+++ b/src/app/components/user/user-functional-components/register/register.component.css
@@ -22,3 +22,25 @@ button:disabled {
 button i {
   font-size: 20px; /* Adjust spinner size */
 }
+
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.password-container input {
+  width: 100%;
+  padding: 8px 35px 8px 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.password-container i {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+  color: gray;
+  margin-bottom: 2px;
+}
